test/errors/packages_error/zs/imported_unknown_single_type_error.zs
package imported_unknown_single_type_error;

import simple_database.UnknownTable;